<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/createNewMemo"
        android:title="@string/appbar_menu_create_new_memo"
        app:showAsAction="never" />

    <item
        android:id="@+id/deleteMemo"
        android:title="@string/appbar_menu_create_new_memo"
        app:showAsAction="never" />

    <item
        android:id="@+id/toSearchTop"
        android:title="@string/appbar_menu_to_search_top"
        app:showAsAction="never" />

    <item
        android:id="@+id/toReminderList"
        android:title="@string/appbar_menu_to_reminder_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/finishApp"
        android:title="@string/appbar_menu_finish_app"
        app:showAsAction="never" />

</menu>