<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/createNewMemo"
        android:title="@string/appbar_menu_create_new_memo"
        app:showAsAction="never" />

    <item
        android:id="@+id/toSearchTop"
        android:title="@string/appbar_menu_to_search_top"
        app:showAsAction="never" />

    <item
        android:id="@+id/toReminderList"
        android:title="@string/appbar_menu_to_reminder_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/toSearchByCalendar"
        android:title="@string/appbar_menu_to_Search_by_calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/finishApp"
        android:title="@string/appbar_menu_finish_app"
        app:showAsAction="never" />

</menu>