<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingTop="0dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical"
    tools:context=".views.main.MemoEditFragment">

    <ImageButton
        android:id="@+id/templateImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="8dp"
        android:background="@drawable/memo_btn_state"
        android:contentDescription="@string/contents_menu_btn_description"
        android:elevation="8dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_anchorGravity="start"
        app:srcCompat="@drawable/ic_template_24dp" />


    <ImageButton
        android:id="@+id/checkBoxImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/memo_btn_state"
        android:contentDescription="@string/contents_checkbox_btn_description"
        android:elevation="8dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:layout_anchor="@id/bulletListImgBtn"
        app:layout_anchorGravity="start"
        app:srcCompat="@drawable/ic_check_box_black_24dp" />

    <ImageButton
        android:id="@+id/bulletListImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:layout_anchor="@id/clearAllImgBtn"
        app:layout_anchorGravity="start"
        android:layout_marginEnd="30dp"
        android:background="@drawable/memo_btn_state"
        android:contentDescription="@string/contents_bullet_btn_description"
        android:elevation="8dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp" />

    <ImageButton
        android:id="@+id/clearAllImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginEnd="50dp"
        android:background="@drawable/memo_btn_state"
        android:contentDescription="@string/contents_clear_btn_description"
        android:elevation="8dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_clear_black_24dp"
        app:layout_anchor="@id/saveImgBtn"
        app:layout_anchorGravity="start"
        tools:ignore="PrivateResource" />


    <ImageButton
        android:id="@+id/saveImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:background="@drawable/memo_btn_state"
        android:contentDescription="@string/contents_save_btn_description"
        android:elevation="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_baseline_save_28" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        app:layout_anchor="@id/saveImgBtn"
        app:layout_anchorGravity="bottom"
        android:layout_marginTop="45dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/memoContentsContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
