<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/targetDateTimeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/target_date_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderStatesTitleTextView" />

    <TextView
        android:id="@+id/targetDateTimeBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/targetDateTimeLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/targetDateTimeLabelTextView"
        app:layout_constraintTop_toTopOf="@+id/targetDateTimeLabelTextView"
        tools:text="2018/10/23  15:35" />

    <TextView
        android:id="@+id/preAlarmLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pre_alarm_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/targetDateTimeLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/targetDateTimeLabelTextView" />

    <TextView
        android:id="@+id/preAlarmBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/preAlarmLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/preAlarmLabelTextView"
        app:layout_constraintTop_toTopOf="@+id/preAlarmLabelTextView"
        tools:text="24時間前" />

    <TextView
        android:id="@+id/postAlarmLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/post_alarm_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/preAlarmLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/preAlarmLabelTextView" />

    <TextView
        android:id="@+id/postAlarmBodyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/postAlarmLabelTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/postAlarmLabelTextView"
        app:layout_constraintTop_toTopOf="@+id/postAlarmLabelTextView"
        tools:text="24時間後" />

    <TextView
        android:id="@+id/reminderStatesTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/popup_window_reminder_states_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:elevation="8dp"
        android:minWidth="48dip"
        android:text="@string/popup_window_reminder_states_delete"
        app:layout_constraintBottom_toBottomOf="@+id/reminderStatesTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reminderStatesTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/reminderStatesTitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>