<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="330dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/templateNameErrorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="@color/design_default_color_error"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/templateNameEditText"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/error_not_input_new_name" />

    <EditText
        android:id="@+id/templateNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_template_name_edit_text_hint"
        android:inputType="text"
        android:maxLength="15"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/templateNameErrorTextView" />

    <Button
        android:id="@+id/addNewTemplateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/add_template_to_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/templateNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/templateNameEditText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/templateRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewTemplateBtn"
        tools:listitem="@layout/memo_template_list_row" />

</androidx.constraintlayout.widget.ConstraintLayout>