<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingTop="0dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical"
    tools:context=".views.display.MemoDisplayActivity">

    <ImageButton
        android:id="@+id/reminderStatesImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="8dp"
        android:background="@drawable/memo_btn_state"
        android:contentDescription="@string/contents_reminder_state_btn_description"
        android:elevation="8dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone"
        app:layout_anchorGravity="start"
        app:srcCompat="@drawable/ic_reminder_24dp" />

    <ImageButton
        android:id="@+id/displayToEditImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginEnd="50dp"
        android:background="@drawable/memo_btn_state"
        android:contentDescription="@string/contents_edit_btn_description"
        android:elevation="8dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_anchor="@id/displaySaveImgBtn"
        app:layout_anchorGravity="start"
        tools:ignore="PrivateResource" />


    <ImageButton
        android:id="@+id/displaySaveImgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:background="@drawable/memo_btn_state"
        android:contentDescription="@string/contents_save_btn_description"
        android:elevation="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_baseline_save_28" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        app:layout_anchor="@id/displaySaveImgBtn"
        app:layout_anchorGravity="bottom"
        android:layout_marginTop="45dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/displayMemoContentsContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
